--- a/TODO
+++ b/TODO
@@ -5,8 +5,8 @@
         1.   Done
       
         2. 
-          a) 
-          b) 
+          a) Done
+          b) Done
           c) 
           d)
           e)
@@ -16,7 +16,7 @@
           a) 
           b)
           c)
-          d)
+          d) Done
           e)
           f) Done
 
