--- a/TODO
+++ b/TODO
@@ -7,13 +7,13 @@
         2. 
           a) Done
           b) Done
-          c) 
-          d)
+          c) Done
+          d) Done
           e)
           f)
           
         3. 
-          a) 
+          a) Done
           b) Done
           c)
           d) Done
