--- a/TODO
+++ b/TODO
@@ -10,14 +10,14 @@
           c) Done
           d) Done
           e)
-          f)
+          f) Done
           
         3. 
           a) Done
           b) Done
           c)
           d) Done
-          e)
+          e) Done
           f) Done
 
 #######################################
