--- a/TODO
+++ b/TODO
@@ -9,7 +9,7 @@
           b) Done
           c) Done
           d) Done
-          e)
+          e) Done
           f) Done
           
         3. 
