--- a/TODO
+++ b/TODO
@@ -15,9 +15,11 @@
         3. 
           a) Done
           b) Done
-          c)
+          c) Done
           d) Done
           e) Done
           f) Done
+
+      Is it over???
 
 #######################################
